--- a/prac_mach_learn_proj.html
+++ b/prac_mach_learn_proj.html
@@ -77,7 +77,7 @@ The data comes from wearable devices. It is collected while many subjects do dif
 <div id="objective" class="section level2">
 <h2>Objective</h2>
 <p>
-The goal of your project is to predict the manner in which they did the exercise.
+The goal of this project is to look at the exercise data and build a model to predict the manner in which a person did an exercise.
 </p>
 </div>
 <div id="executive-summary" class="section level2">
